Proyecto2/kubernetes/k8s-test/consumer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: consumer
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consumer
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/so1-proyecto2: "true"
        io.kompose.service: consumer
    spec:
      containers:
      - image: kritianwhite/project2_golang_consumer
        name: consumer
        resources: {}
      restartPolicy: Always
status: {}
