Proyecto2/kubernetes/k8s-test/producer_rust_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rust-producer
  name: rust-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rust-producer
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/so1-proyecto2: "true"
        io.kompose.service: rust-producer
    spec:
      containers:
      - image: kritianwhite/rust_producer
        name: rust-producer
        ports:
        - containerPort: 8080
          hostPort: 8080
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rust-producer
  name: rust-producer
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: rust-producer
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rust-cliente
  name: rust-cliente
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rust-cliente
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/so1-proyecto2: "true"
        io.kompose.service: rust-cliente
    spec:
      containers:
      - image: kritianwhite/rust_cliente
        name: rust-cliente
        ports:
        - containerPort: 8000
          hostPort: 8000
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rust-cliente
  name: rust-cliente
spec:
  type: LoadBalancer
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: rust-cliente
